tests/type/errors/bad_early_bind.typedsol
4:16 error: Symbol not found
